Fix max-width on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -311,6 +311,7 @@ main {
   main {
     padding: 0;
     margin: 0;
+    max-width: 100%;
   }
 }
 
